--- a/templates/index.html
+++ b/templates/index.html
@@ -1,109 +1,60 @@
 {% load static %}
 
-
 <html>
-
     <head>
-
-        <meta charset="utf-8"/>
-
-        <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1"/>
-
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+        
+        <!-- Bootstrap 5 CSS -->
         <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/solar/bootstrap.min.css">
-
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
-
         <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
-
-
     </head>
 
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
-
-        <a class="navbar-brand main-heading"></a>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+            <a class="navbar-brand main-heading" href="#">Taskly</a>
     
-        &nbsp; Taskly
+            <button 
+                class="navbar-toggler" 
+                type="button" 
+                data-bs-toggle="collapse" 
+                data-bs-target="#navbarNavDropdown" 
+                aria-controls="navbarNavDropdown" 
+                aria-expanded="false" 
+                aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
     
-        </a>
-    
-        <button 
-         class="navbar-toggler"
-         type="button"
-         data-toggle="collapse"
-         data-target="navbarNavDropdown"
-         aria-controls="navbarNavDropdown"
-         aria-expanded="false"
-         aria-label="Toggle navigation"
-         >
-         <span class="navbar-toggler-icon"></span>
-    
-        </button>
-    
-         <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-    
-            <ul class="navbar-nav ms-auto">
-    
-                &nbsp;  &nbsp;  &nbsp;
-    
-                <li class="nav-item">
-
-                    <a class="btn btn-outline-primary navbar-btn" type="button" href="{% url 'register' %}">Register</a>
-                                        
-                </li>
-    
-                &nbsp;  &nbsp;  &nbsp;
-    
-                <li class="nav-item"></li>
-    
+            <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="btn btn-outline-primary navbar-btn" type="button" href="{% url 'register' %}">Register</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="btn btn-outline-primary navbar-btn" type="button" href="{% url 'my-login' %}">Login</a>
-                                            
-                </li>   
-
-    
-            </ul>
-         </div>
-    
-    </nav>
-
-         <body>
-
-            {% include 'pre-base.html' %}
-
-            <br>
-            <br>
-
-            <div class="text-center">
-
-                <h3>
-                    Taskly... A home for your tasks.
-                </h3>
-                
-                <br> <br>
-
-                <a class="btn btn-outline-primary navbar-btn" type="button" href="{% url 'register' %}">Register</a>
-
-                <br> <br>
-
-                <br>
-
-                
-
+                    </li>   
+                </ul>
             </div>
-         </body>
+        </nav>
 
+        <div class="text-center mt-5">
+            <h3>Taskly... A home for your tasks.</h3>
+            
+            <br><br>
 
+            <a class="btn btn-outline-primary" type="button" href="{% url 'register' %}">Register</a>
+        </div>
 
+        <!-- Include other content -->
+       
         
-    <br>
+        <br><br>
 
-    <script src="{% static 'js/app.js' %}"></script>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
-
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-
+        <!-- Bootstrap JS and JQuery for Bootstrap 5 -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
+        <script src="{% static 'js/app.js' %}"></script>
+    </body>
 </html>
