--- a/templates/profile/base.html
+++ b/templates/profile/base.html
@@ -1,63 +1,82 @@
-<!--<h4> this is website </h4>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
+    <!-- Bootstrap 5 CSS -->
+    <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/solar/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    
+    <!-- Custom Styles for Navbar -->
+    <style>
+        .navbar-nav .nav-item {
+            margin: 0 5px;
+        }
+        
+        .navbar-nav .nav-link {
+            margin: 0;
+        }
+        
+        .navbar-toggler {
+            border: none;
+        }
+        
+        .navbar-brand {
+            font-weight: bold;
+        }
 
-<hr>-->
+        .navbar-nav .nav-item .nav-link {
+            padding: 8px 15px;
+        }
+        
+        @media (max-width: 767px) {
+            .navbar-collapse {
+                text-align: center;
+            }
+        }
+    </style>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">To-Do</a>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+        <button 
+            class="navbar-toggler" 
+            type="button" 
+            data-bs-toggle="collapse" 
+            data-bs-target="#navbarNavDropdown" 
+            aria-controls="navbarNavDropdown" 
+            aria-expanded="false" 
+            aria-label="Toggle navigation"
+        >
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <a class="navbar-brand main-heading"></a>
-
-    &nbsp; To-Do
-
-    </a>
-
-    <button 
-     class="navbar-toggler"
-     type="button"
-     data-toggle="collapse"
-     data-target="navbarNavDropdown"
-     aria-controls="navbarNavDropdown"
-     aria-expanded="false"
-     aria-label="Toggle navigation"
-     >
-     <span class="navbar-toggler-icon"></span>
-
-    </button>
-
-     <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-
-        <ul class="navbar-nav ml-auto">
-
-            &nbsp;  &nbsp;  &nbsp;
-
-            <li class="nav-item">
-
-                <a class="btn btn-outline-primary navbar-btn" type="button" href="{% url 'dashboard' %}">Dashboard</a>
-                                    
-            </li>
-
-            &nbsp;  &nbsp;  &nbsp;
-
-            <li class="nav-item"></li>
-
-                    <a class="btn btn-outline-primary navbar-btn" type="button" href="{% url 'create-task' %}">Create Task</a>
-                                        
-            </li>
-
-            &nbsp;  &nbsp;  &nbsp;
-
-                <li class="nav-item"></li>
-
-                    <a class="btn btn-outline-primary navbar-btn" type="button" href="{% url 'view-tasks' %}">View Task</a>
-                                    
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="btn btn-outline-primary navbar-btn" type="button" href="{% url 'dashboard' %}">Dashboard</a>
                 </li>
+                <li class="nav-item">
+                    <a class="btn btn-outline-primary navbar-btn" type="button" href="{% url 'create-task' %}">Create Task</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-outline-primary navbar-btn" type="button" href="{% url 'view-tasks' %}">View Task</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-primary navbar-btn" type="button" href="{% url 'my-login' %}">Log out</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-            &nbsp;  &nbsp;  &nbsp;
-
-            <li class="nav-item"></li>
-
-                <a class="btn btn-primary navbar-btn" type="button" href="{% url 'my-login' %}">Log out</a>
-                            
-        </li>
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
+</body>
+</html>
             
              
 
