--- a/templates/register.html
+++ b/templates/register.html
@@ -28,6 +28,7 @@
     <div class="container bg-white shadow-md p-5 form-layout"> 
 
         <h3>this is register page</h3>
+        <p> test </p>
 
         <br>
 
